--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -1,7 +1,19 @@
-.post-title {
-    margin: 0;
-    font-weight: bolder;
-    padding-bottom: 0.5rem;
+.post-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
+.post-title {
+    font-weight: bolder;
+    padding-bottom: 0.5rem;
+    margin: 0;
+}
 
+.post-date {
+    padding-top: 0.25rem;
+    margin: 0;
+    font-style: italic;
+    font-size: large;
+    font-weight: lighter;
+}
