Fix: CSS of dashboard + GH Actions Updates (#8)
* Remove draggable from card

* Fix spacing

* Rename posts to blog posts

* Fix dashboard font size on desktop

* Lint fix

* Remove cron job

* Add gh-pages workflow to deploy on commit to main

--- a/src/containers/dashboard/Dashboard.css
+++ b/src/containers/dashboard/Dashboard.css
@@ -17,7 +17,7 @@
     background-color: var(--app-primary-background);
     color: var(--text-primary-color);
     font-family: var(--app-title-font);
-    font-size: xx-large;
+    font-size: x-large;
     text-decoration: none;
     text-transform: uppercase;
     text-shadow: var(--text-shadow-distance) var(--text-shadow-distance)  var(--text-shadow-color);
@@ -26,7 +26,6 @@
     transition: text-shadow 100ms;
 
     &:hover {
-        /*text-shadow: calc(var(--text-shadow-distance) * -1) calc(var(--text-shadow-distance) * -1 ) var(--app-title-font-shadow);*/
         box-shadow: var(--app-card-box-shadow-hover);
 
         & > .dashboard-link-text {
@@ -66,7 +65,6 @@
         --margins-size: calc(var(--side-margins) / 2);
         --text-shadow-distance: 0.25rem;
 
-        width: calc(100% - var(--side-margins));
         overflow-y: scroll;
         margin-bottom: var(--margins-size);
     }
