Add projects page

--- a/src/components/tags-bar/TagsBar.css
+++ b/src/components/tags-bar/TagsBar.css
@@ -5,7 +5,7 @@
     
     & .tags-bar-title {
         font-size: 12px;
-        width: 3rem;
+        min-width: 3rem;
         align-items: center;
         display: flex;
         justify-content: flex-end;
