--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 .App {
   /*--app-background: #282c34;*/
@@ -89,7 +89,7 @@
   padding-top: var(--margins-size);
 
   font-family: var(--app-title-font);
-  text-shadow: var(--text-shadow-distance) var(--text-shadow-distance)  var(--app-title-font-shadow);
+  text-shadow: var(--text-shadow-distance) var(--text-shadow-distance) var(--app-title-font-shadow);
   text-transform: uppercase;
 }
 
