--- a/src/containers/projects/project-card/ProjectCard.css
+++ b/src/containers/projects/project-card/ProjectCard.css
@@ -33,7 +33,10 @@
     font-weight: bold;
   }
 
-  a, a:visited, a:hover, a:active {
+  a,
+  a:visited,
+  a:hover,
+  a:active {
     color: var(--text-positive-color);
   }
 }
