--- a/src/components/page-container/PageContainer.css
+++ b/src/components/page-container/PageContainer.css
@@ -20,6 +20,7 @@
   font-size: xxx-large;
   text-decoration: none;
   text-transform: uppercase;
-  text-shadow: var(--text-shadow-distance) var(--text-shadow-distance) var(--text-shadow-color);
+  text-shadow: var(--text-shadow-distance) var(--text-shadow-distance)
+    var(--text-shadow-color);
   padding-bottom: 1rem;
 }
