Feature: Projects Page + Prettier (#18)
* Add page container component

* Add app font Montserrat

* Remove 'dev' branch mentioned in eslint action

* Change title in header

* Add spinner component

* Add routes helpers + constants

* Add projects page (wip)

* Add project data file (with temp data)

* Add WIP message component

* Merge conflict fixes

* Add projects page

* Add WIP message

* Add WIP message

* Add prettier

* Run prettier

* Run prettier

* Update WIP component + add prettier to this projects info

--- a/src/components/tags-bar/TagsBar.css
+++ b/src/components/tags-bar/TagsBar.css
@@ -1,16 +1,16 @@
 .tags-bar {
-    width: 100%;
-    display: inline-flex;
-    flex-wrap: wrap;
-    
-    & .tags-bar-title {
-        font-size: 12px;
-        width: 3rem;
-        align-items: center;
-        display: flex;
-        justify-content: flex-end;
-        margin-right: 0.5rem;
-        margin-bottom: 0.5rem;
-        font-weight: bold;
-    }
+  width: 100%;
+  display: inline-flex;
+  flex-wrap: wrap;
+
+  & .tags-bar-title {
+    font-size: 12px;
+    min-width: 3rem;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+  }
 }
